infrafiles/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talon-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: talon-service
      type: server
  template:
    metadata:
      labels:
        app: talon-service
        type: server
    spec:
      containers:
        - name: talon-service
          image: k3d-registry.localhost:9876/talon-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          livenessProbe:
            httpGet:
              path: /ping
              port: 9090
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
