infrafiles/k8s/ingress.nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talon-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "demo.t9.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: talon-service
            port:
              number: 9090
